# gdemo_rust

./: Cargo.toml  README.md  build.rs
shaders/: main_fs.glsl  main_vs.glsl
src/: camera.rs  fps_counter.rs  main.rs  renderer.rs  window_state.rs
